Updated gradle; implemented automatic versioning

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.gladed.androidgitversion' version '0.4.14'
 }
 
 android {
@@ -9,9 +10,8 @@ android {
         applicationId "ru.firectmusic.fmlkclient"
         minSdk 23
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
-
+        versionName androidGitVersion.name()
+        versionCode androidGitVersion.code()
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
